--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.dinuscxj:circleprogressbar:1.3.0'
+    implementation 'ca.antonious:materialdaypicker:0.6.0'
 }
