--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.dinuscxj:circleprogressbar:1.3.0'
     implementation 'ca.antonious:materialdaypicker:0.6.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.google.firebase:firebase-firestore:21.3.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
