--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.guava:guava:28.1-android'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
