--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.guava:guava:28.1-android'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    implementation 'androidx.preference:preference:1.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
